--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "npx expo start",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web",
+    "eject": "npx expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^3.5.2",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "expo": "~42.0.0",
-    "expo-network": "~3.2.0",
-    "expo-notifications": "~0.12.3",
-    "expo-permissions": "~12.1.1",
-    "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "@expo/webpack-config": "^18.1.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/stack": "^6.0.0",
+    "expo": "^49.0.0",
+    "expo-network": "~5.4.0",
+    "expo-notifications": "~0.20.1",
+    "expo-permissions": "~14.2.1",
+    "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^12.0.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.1",
+    "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-network": "^1.0.1",
-    "watchman": "^1.0.0"
+    "watchman": "^1.0.0",
+    "expo-splash-screen": "~0.20.5"
+  },
+  "resolutions": {
+    "babel-loader": "8.0.6",
+    "@babel/types": "7.22.5",
+    "@babel/traverse": "7.22.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "name": "Reminder_mobile_app",
+  "version": "1.0.0"
 }
