--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-network": "~5.4.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "~14.2.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.0",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^12.0.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -33,8 +35,7 @@
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-network": "^1.0.1",
-    "watchman": "^1.0.0",
-    "expo-splash-screen": "~0.20.5"
+    "watchman": "^1.0.0"
   },
   "resolutions": {
     "babel-loader": "8.0.6",
